# Mechsuit

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  pause-fail-handoff.md  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.claude/agents/: specsmd-fire-team-config.md  specsmd-fire-team-planner.md  specsmd-fire-team.md
.claude/commands/: specsmd-fire-team-builder.md
.specs-fire/: config.yaml  state.yaml
.specs-fire/intents/commander-supervisor-agent/: brief.md
.specs-fire/intents/commander-tts-piper/: brief.md
.specs-fire/intents/commander-voice-input/: brief.md
.specs-fire/intents/foundation-terminal-grid/: brief.md
.specs-fire/intents/session-quick-actions/: brief.md
.specs-fire/intents/session-status-engine/: brief.md
.specs-fire/intents/settings-workspace-root/: brief.md
.specs-fire/intents/sidebar-status-dots/: brief.md
.specs-fire/intents/usage-meter/: brief.md
.specs-inferno/: config.yaml  state.yaml
.specs-inferno/intents/collected-view/: brief.md
.specs-inferno/intents/sessions-graph/: brief.md
.specs-inferno/intents/terminal-perf/: brief.md
.specsmd/: manifest.yaml
.specsmd/fire/: README.md
docs/superpowers/plans/: 2026-06-17-commander-terminal-and-pause.md
docs/superpowers/specs/: 2026-06-17-commander-terminal-and-pause-design.md
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  models.rs
src-tauri/src/commander/: mod.rs
src-tauri/src/directory/: discover.rs  mod.rs  persist.rs
src-tauri/src/mcp/: fsread.rs  mod.rs  screen.rs
src-tauri/src/pty/: mod.rs  registry.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/usage/: mod.rs
src-tauri/src/worktree/: list.rs  mod.rs
src/assets/fonts/: fonts.css  offlineFonts.test.ts
src/components/CollectedWorkspace/: CollectedWorkspace.css  CollectedWorkspace.test.tsx  CollectedWorkspace.tsx  WorkspaceBay.css  WorkspaceBay.test.tsx  WorkspaceBay.tsx  index.ts
src/components/Commander/: Commander.css  Commander.test.tsx  Commander.tsx  index.ts
src/components/ErrorBoundary/: ErrorBoundary.css  ErrorBoundary.test.tsx  ErrorBoundary.tsx
src/components/SessionsGraph/: GraphCanvas.css  GraphCanvas.test.tsx  GraphCanvas.tsx  (+7 more)
src/ipc/: commands.ts  events.ts  window.ts
src/lib/: activeWorkspaces.test.ts  activeWorkspaces.ts  directoryIdentity.test.ts  directoryIdentity.ts  discovery.test.ts  discovery.ts  focusSession.ts  graphLayout.test.ts  graphLayout.ts  gridLayout.test.ts  gridLayout.ts  gridNavigation.test.ts  gridNavigation.ts  nodeStatus.test.ts  nodeStatus.ts  quickSpawn.test.ts  quickSpawn.ts  recentWorkspace.test.ts  recentWorkspace.ts  relativeTime.test.ts  relativeTime.ts  reorder.test.ts  reorder.ts  sessionName.test.ts  sessionName.ts  sessionStatusSummary.test.ts  sessionStatusSummary.ts  statusParser.test.ts  statusParser.ts  subagentParser.test.ts  subagentParser.ts  terminalPool.test.ts  terminalPool.ts  usageFormat.test.ts  usageFormat.ts
src/state/: directoriesStore.test.ts  directoriesStore.ts  graphStore.test.ts  graphStore.ts  pausedStore.test.ts  pausedStore.ts  sessionsStore.test.ts  sessionsStore.ts  settingsStore.test.ts  settingsStore.ts  statusEngine.test.ts  statusEngine.ts  statusStore.test.ts  statusStore.ts  subagentEngine.test.ts  subagentEngine.ts  subagentStore.test.ts  subagentStore.ts  uiStore.test.ts  uiStore.ts  usageStore.test.ts  usageStore.ts
src/test/: setup.ts
src/types/: index.ts
(+84 files in other folders)
