[package]
name = "mechsuit"
version = "0.1.0"
description = "Single-screen control surface for many concurrent agent/terminal sessions"
edition = "2021"
rust-version = "1.77"

# main.rs is a thin binary that delegates to lib.rs::run().
[lib]
name = "mechsuit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }

# In-process MCP server (Commander). rmcp ships the streamable-HTTP server
# transport as a tower service; axum/hyper serve it over a localhost-only TCP
# listener and tokio provides the async runtime for the server task.
rmcp = { version = "1", default-features = false, features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync"] }
tokio-util = "0.7"

[features]
# This feature is used for production builds where `devUrl` is disabled.
custom-protocol = ["tauri/custom-protocol"]
