[package]
name = "mechsuit"
version = "0.1.0"
description = "Single-screen control surface for many concurrent agent/terminal sessions"
edition = "2021"
rust-version = "1.77"

# main.rs is a thin binary that delegates to lib.rs::run().
[lib]
name = "mechsuit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
# Pause/resume sends SIGSTOP/SIGCONT to a session's foreground process group
# (Linux-only; the app is Linux-only).
libc = "0.2"
uuid = { version = "1", features = ["v4"] }

# Terminal emulation for Commander observability: each session's raw PTY bytes
# are also fed to a vt100 parser so `snapshot_session` / `ask_session` can return
# the RENDERED screen grid (cursor moves, spinner repaints, and SGR codes
# applied) instead of raw scrollback noise.
vt100 = "0.15"
# Faithful Rust port of the frontend statusParser heuristics (approval/error
# prompts) plus best-effort model/token/last-message extractors. Already in the
# dependency tree transitively; pinned directly here for the `mcp::screen` module.
regex = "1"

# In-process MCP server (Commander). rmcp ships the streamable-HTTP server
# transport as a tower service; axum/hyper serve it over a localhost-only TCP
# listener and tokio provides the async runtime for the server task.
rmcp = { version = "1", default-features = false, features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
tokio-util = "0.7"

# Claude subscription usage meter: GET the undocumented OAuth usage endpoint.
# Already in the tree transitively (via rmcp) at 0.13.x without a TLS backend;
# pulled in directly here with a rustls TLS backend so HTTPS resolves, plus
# json. (reqwest 0.13 renamed the old `rustls-tls` feature to `rustls`.)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[features]
# This feature is used for production builds where `devUrl` is disabled.
custom-protocol = ["tauri/custom-protocol"]
